--- a/packages/starlight/components/RightSidebarPanel.astro
+++ b/packages/starlight/components/RightSidebarPanel.astro
@@ -1,3 +1,7 @@
+---
+import type { StarlightRouteData as Props } from '../utils/route-data';
+---
+
 <div class="right-sidebar-panel sl-hidden lg:sl-block">
 	<div class="sl-container">
 		<slot />
