--- a/packages/starlight/components/MobileMenuToggle.astro
+++ b/packages/starlight/components/MobileMenuToggle.astro
@@ -1,10 +1,8 @@
 ---
-import Icon from '../user-components/Icon.astro';
+import type { StarlightRouteData as Props } from '../utils/route-data';
 import { useTranslations } from '../utils/translations';
 
-interface Props {
-	locale: string | undefined;
-}
+import Icon from '../user-components/Icon.astro';
 
 const t = useTranslations(Astro.props.locale);
 ---
