--- a/packages/starlight/components/Hero.astro
+++ b/packages/starlight/components/Hero.astro
@@ -1,7 +1,8 @@
 ---
 import { Image } from 'astro:assets';
-import CallToAction from './CallToAction.astro';
+import { PAGE_TITLE_ID } from '../constants';
 import type { StarlightRouteData as Props } from '../utils/route-data';
+import CallToAction from './CallToAction.astro';
 
 const { data } = Astro.props.entry;
 const { title = data.title, tagline, image, actions = [] } = data.hero || {};
@@ -29,7 +30,7 @@ const imageAttrs = {
 	}
 	<div class="sl-flex stack">
 		<div class="sl-flex copy">
-			<h1 id="_top" data-page-title set:html={title} />
+			<h1 id={PAGE_TITLE_ID} data-page-title set:html={title} />
 			{tagline && <div class="tagline" set:html={tagline} />}
 		</div>
 		{
