--- a/packages/starlight/components/SkipLink.astro
+++ b/packages/starlight/components/SkipLink.astro
@@ -1,11 +1,12 @@
 ---
+import { PAGE_TITLE_ID } from '../constants';
 import { useTranslations } from '../utils/translations';
 import type { StarlightRouteData as Props } from '../utils/route-data';
 
 const t = useTranslations(Astro.props.locale);
 ---
 
-<a href="#_top">{t('skipLink.label')}</a>
+<a href={`#${PAGE_TITLE_ID}`}>{t('skipLink.label')}</a>
 
 <style>
 	a {
