--- a/packages/starlight/components/Search.astro
+++ b/packages/starlight/components/Search.astro
@@ -87,7 +87,7 @@ const pagefindTranslations = {
 			openBtn.addEventListener('click', openModal);
 			openBtn.disabled = false;
 			closeBtn.addEventListener('click', closeModal);
-			window.addEventListener('keypress', (e) => {
+			window.addEventListener('keydown', (e) => {
 				if (e.key === 'Escape' && dialog.open) {
 					e.preventDefault();
 					closeModal();
