--- a/docs/src/components/showcase-sites.astro
+++ b/docs/src/components/showcase-sites.astro
@@ -4,6 +4,7 @@ import FluidGrid from './fluid-grid.astro';
 ---
 
 <FluidGrid>
+	<Card title="Refact" href="https://docs.refact.ai/" thumbnail="refact.ai.png" />
 	<Card title="Athena OS" href="https://athenaos.org" thumbnail="www.athenaos.org.png" />
 	<Card
 		title="PubIndexAPI Docs"
