Remove separation of `layout/` and `components/`

--- a/packages/starlight/404.astro
+++ b/packages/starlight/404.astro
@@ -2,7 +2,7 @@
 import { getEntry } from 'astro:content';
 import config from 'virtual:starlight/user-config';
 import EmptyContent from './components/EmptyMarkdown.md';
-import Page from './layout/Page.astro';
+import Page from './components/Page.astro';
 import type { StarlightDocsEntry } from './utils/routing';
 import { useTranslations } from './utils/translations';
 
