--- a/packages/starlight/index.astro
+++ b/packages/starlight/index.astro
@@ -2,7 +2,7 @@
 import type { InferGetStaticPropsType } from 'astro';
 import { paths } from './utils/routing';
 
-import Page from './layout/Page.astro';
+import Page from './components/Page.astro';
 
 export async function getStaticPaths() {
 	return paths;
