--- a/packages/starlight/components/EditLink.astro
+++ b/packages/starlight/components/EditLink.astro
@@ -1,26 +1,15 @@
 ---
-import config from 'virtual:starlight/user-config';
-import { useTranslations } from '../utils/translations';
 import Icon from '../user-components/Icon.astro';
 import type { StarlightRouteData as Props } from '../utils/route-data';
+import { useTranslations } from '../utils/translations';
 
 const t = useTranslations(Astro.props.locale);
-const { editUrl } = Astro.props.entry.data;
-
-let { baseUrl } = config.editLink;
-if (baseUrl && baseUrl.at(-1) !== '/') baseUrl += '/';
-
-const url =
-	typeof editUrl === 'string'
-		? editUrl
-		: baseUrl
-		? baseUrl + 'src/content/docs/' + Astro.props.id
-		: undefined;
+const { editUrl } = Astro.props;
 ---
 
 {
-	editUrl !== false && url && (
-		<a href={url} class="sl-flex">
+	editUrl && (
+		<a href={editUrl} class="sl-flex">
 			<Icon name="pencil" size="1.2em" />
 			{t('page.editLink')}
 		</a>
