--- a/packages/starlight/components/SocialIcons.astro
+++ b/packages/starlight/components/SocialIcons.astro
@@ -4,38 +4,16 @@ import Icon from '../user-components/Icon.astro';
 import type { StarlightRouteData as Props } from '../utils/route-data';
 
 type Platform = keyof NonNullable<typeof config.social>;
-
-const labels: Record<Platform, string> = {
-	github: 'GitHub',
-	gitlab: 'GitLab',
-	bitbucket: 'Bitbucket',
-	discord: 'Discord',
-	gitter: 'Gitter',
-	twitter: 'Twitter',
-	mastodon: 'Mastodon',
-	codeberg: 'Codeberg',
-	codePen: 'CodePen',
-	youtube: 'YouTube',
-	threads: 'Threads',
-	linkedin: 'LinkedIn',
-	twitch: 'Twitch',
-	microsoftTeams: 'Microsoft Teams',
-	instagram: 'Instagram',
-	stackOverflow: 'Stack Overflow',
-};
-
-const links = Object.entries(config.social || {}).filter(([, url]) => Boolean(url)) as [
-	platform: Platform,
-	url: string,
-][];
+type SocialConfig = NonNullable<NonNullable<typeof config.social>[Platform]>;
+const links = Object.entries(config.social || {}) as [Platform, SocialConfig][];
 ---
 
 {
 	links.length > 0 && (
 		<>
-			{links.map(([platform, url]) => (
+			{links.map(([platform, { label, url }]) => (
 				<a href={url} rel="me" class="sl-flex">
-					<span class="sr-only">{labels[platform]}</span>
+					<span class="sr-only">{label}</span>
 					<Icon name={platform} />
 				</a>
 			))}
