--- a/packages/starlight/components/Page.astro
+++ b/packages/starlight/components/Page.astro
@@ -15,7 +15,7 @@ import {
 	FallbackContentNotice,
 	Footer,
 	Header,
-	HeadSEO,
+	Head,
 	Hero,
 	MarkdownContent,
 	RightSidebar,
@@ -47,7 +47,7 @@ const pagefindEnabled =
 	data-has-hero={Boolean(route.entry.data.hero)}
 >
 	<head>
-		<HeadSEO {...route} />
+		<Head {...route} />
 		<style>
 			html:not([data-has-toc]) {
 				--sl-mobile-toc-height: 0rem;
