feat: add support for custom HTML attributes to sidebar links

--- a/packages/starlight/components/SidebarSublist.astro
+++ b/packages/starlight/components/SidebarSublist.astro
@@ -17,7 +17,8 @@ interface Props {
 					<a
 						href={entry.href}
 						aria-current={entry.isCurrent && 'page'}
-						class:list={{ large: !Astro.props.nested }}
+						class:list={[{ large: !Astro.props.nested }, entry.attributes?.['class']]}
+						{...entry.attributes}
 					>
 						<span>{entry.label}</span>
 						{entry.badge && (
