refactor: add sidebar link html attributes default value
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/docs/src/components/sidebar-preview.astro
+++ b/docs/src/components/sidebar-preview.astro
@@ -20,11 +20,9 @@ function makeEntries(items: SidebarConfig): SidebarEntry[] {
 				href: item.link,
 				isCurrent: false,
 				badge: item.badge,
-				attrs: item.attrs,
+				attrs: item.attrs ?? {},
 			};
 		}
-
-		item;
 
 		return {
 			type: 'group',
