remove: remove role of banner

--- a/packages/starlight/components/Banner.astro
+++ b/packages/starlight/components/Banner.astro
@@ -4,7 +4,7 @@ interface Props {
 }
 ---
 
-<div class="sl-banner" role="banner" set:html={Astro.props.content} />
+<div class="sl-banner" set:html={Astro.props.content} />
 
 <style>
 	.sl-banner {
