--- a/packages/starlight/components/Sidebar.astro
+++ b/packages/starlight/components/Sidebar.astro
@@ -1,7 +1,7 @@
 ---
 import type { StarlightRouteData as Props } from '../utils/route-data';
 
-import { LanguageSelect, ThemeSelect } from 'virtual:starlight/components';
+import { MobileMenuFooter } from 'virtual:starlight/components';
 import SidebarSublist from './SidebarSublist.astro';
 
 const { sidebar } = Astro.props;
@@ -9,10 +9,7 @@ const { sidebar } = Astro.props;
 
 <div class="sidebar sl-flex">
 	<SidebarSublist sublist={sidebar} />
-	<div class="mobile-preferences sl-flex md:sl-hidden">
-		<ThemeSelect {...Astro.props} />
-		<LanguageSelect {...Astro.props} />
-	</div>
+	<MobileMenuFooter {...Astro.props} />
 </div>
 
 <style>
@@ -21,12 +18,6 @@ const { sidebar } = Astro.props;
 		padding: 1rem var(--sl-sidebar-pad-x);
 		flex-direction: column;
 		gap: 1rem;
-	}
-
-	.mobile-preferences {
-		justify-content: space-between;
-		border-top: 1px solid var(--sl-color-gray-6);
-		padding: 0.5rem 0;
 	}
 
 	@media (min-width: 50rem) {
