--- a/packages/starlight/components/EditLink.astro
+++ b/packages/starlight/components/EditLink.astro
@@ -1,6 +1,7 @@
 ---
 import type { CollectionEntry } from 'astro:content';
 import config from 'virtual:starlight/user-config';
+import project from 'virtual:starlight/project-context';
 import { useTranslations } from '../utils/translations';
 import Icon from '../user-components/Icon.astro';
 
@@ -12,6 +13,7 @@ interface Props {
 
 const t = useTranslations(Astro.props.locale);
 const { editUrl } = Astro.props.data;
+const srcPath = project.srcDir.replace(project.root, '');
 
 let { baseUrl } = config.editLink;
 if (baseUrl && baseUrl.at(-1) !== '/') baseUrl += '/';
@@ -20,7 +22,7 @@ const url =
 	typeof editUrl === 'string'
 		? editUrl
 		: baseUrl
-		? baseUrl + 'src/content/docs/' + Astro.props.id
+		? baseUrl + srcPath + 'content/docs/' + Astro.props.id
 		: undefined;
 ---
 
