--- a/packages/starlight/components/SocialIcons.astro
+++ b/packages/starlight/components/SocialIcons.astro
@@ -21,6 +21,7 @@ const labels: Record<Platform, string> = {
 	microsoftTeams: 'Microsoft Teams',
 	instagram: 'Instagram',
 	stackOverflow: 'Stack Overflow',
+	telegram: 'Telegram',
 	rss: 'RSS',
 };
 
