add twitter new logo (#752)
Co-authored-by: Adrien Pinet <apinet@users.noreply.github.com>
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/packages/starlight/components/SocialIcons.astro
+++ b/packages/starlight/components/SocialIcons.astro
@@ -21,6 +21,7 @@ const labels: Record<Platform, string> = {
 	microsoftTeams: 'Microsoft Teams',
 	instagram: 'Instagram',
 	stackOverflow: 'Stack Overflow',
+	'x.com': 'X',
 	telegram: 'Telegram',
 	rss: 'RSS',
 };
