--- a/packages/starlight/components/Search.astro
+++ b/packages/starlight/components/Search.astro
@@ -126,6 +126,9 @@ const pagefindTranslations = {
 </script>
 
 <style>
+	site-search {
+		display: contents;
+	}
 	button[data-open-modal] {
 		display: flex;
 		align-items: center;
