Move mobile menu footer hidden class to parent

--- a/packages/starlight/components/MobileMenuFooter.astro
+++ b/packages/starlight/components/MobileMenuFooter.astro
@@ -3,7 +3,7 @@ import { LanguageSelect, ThemeSelect } from 'virtual:starlight/components';
 import type { StarlightRouteData as Props } from '../utils/route-data';
 ---
 
-<div class="mobile-preferences sl-flex md:sl-hidden">
+<div class="mobile-preferences sl-flex">
 	<ThemeSelect {...Astro.props} />
 	<LanguageSelect {...Astro.props} />
 </div>
