--- a/packages/starlight/components/Sidebar.astro
+++ b/packages/starlight/components/Sidebar.astro
@@ -8,4 +8,6 @@ const { sidebar } = Astro.props;
 ---
 
 <SidebarSublist sublist={sidebar} />
-<MobileMenuFooter {...Astro.props} />
+<div class="md:sl-hidden">
+  <MobileMenuFooter {...Astro.props} />
+</div>
