BREAKING: Include `<Footer />` in splash template
Migration path:

Set `editUrl`, `lastUpdated`, `prev`, and `next` to `false` in frontmatter of pages using `template: splash` to hide any of those if they are displaying.

--- a/packages/starlight/components/Page.astro
+++ b/packages/starlight/components/Page.astro
@@ -96,6 +96,7 @@ const pagefindEnabled =
 								<MarkdownContent {...Astro.props}>
 									<slot />
 								</MarkdownContent>
+								<Footer {...Astro.props} />
 							</ContentPanel>
 						) : (
 							<>
