fix: prevent text from overflowing in various cases

--- a/packages/starlight/components/RightSidebarPanel.astro
+++ b/packages/starlight/components/RightSidebarPanel.astro
@@ -26,7 +26,7 @@
 		font-size: var(--sl-text-xs);
 		text-decoration: none;
 		color: var(--sl-color-gray-3);
-		word-break: break-word;
+		overflow-wrap: anywhere;
 	}
 	.right-sidebar-panel :global(a:hover) {
 		color: var(--sl-color-white);
