--- a/packages/starlight/components/Search.astro
+++ b/packages/starlight/components/Search.astro
@@ -405,7 +405,7 @@ const pagefindTranslations = {
 
 	#starlight__search .pagefind-ui__result-excerpt {
 		font-size: calc(1rem * var(--pagefind-ui-scale));
-		word-break: break-word;
+		overflow-wrap: anywhere;
 	}
 
 	#starlight__search mark {
