feat: add facebook icon

--- a/packages/starlight/components/SocialIcons.astro
+++ b/packages/starlight/components/SocialIcons.astro
@@ -24,6 +24,7 @@ const labels: Record<Platform, string> = {
 	'x.com': 'X',
 	telegram: 'Telegram',
 	rss: 'RSS',
+	facebook: 'Facebook',
 };
 
 const links = Object.entries(config.social || {}).filter(([, url]) => Boolean(url)) as [
