feat: add email icon

--- a/packages/starlight/components/SocialIcons.astro
+++ b/packages/starlight/components/SocialIcons.astro
@@ -25,6 +25,7 @@ const labels: Record<Platform, string> = {
 	telegram: 'Telegram',
 	rss: 'RSS',
 	facebook: 'Facebook',
+	email: 'Email',
 };
 
 const links = Object.entries(config.social || {}).filter(([, url]) => Boolean(url)) as [
