refactor: clean up props type import in components

--- a/packages/starlight/components/Head.astro
+++ b/packages/starlight/components/Head.astro
@@ -6,7 +6,7 @@ import type { HeadConfigSchema } from '../schemas/head';
 import { fileWithBase } from '../utils/base';
 import { createHead } from '../utils/head';
 import { localizedUrl } from '../utils/localizedUrl';
-import type { StarlightRouteData as Props } from '../utils/route-data';
+import type { Props } from '../props';
 
 const { entry, lang } = Astro.props;
 const { data } = entry;
