--- a/packages/starlight/components/Hero.astro
+++ b/packages/starlight/components/Hero.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from 'astro:assets';
 import { PAGE_TITLE_ID } from '../constants';
-import type { StarlightRouteData as Props } from '../utils/route-data';
+import type { Props } from '../props';
 import CallToAction from './CallToAction.astro';
 
 const { data } = Astro.props.entry;
