--- a/packages/starlight/components/LanguageSelect.astro
+++ b/packages/starlight/components/LanguageSelect.astro
@@ -3,7 +3,7 @@ import config from 'virtual:starlight/user-config';
 import { localizedUrl } from '../utils/localizedUrl';
 import { useTranslations } from '../utils/translations';
 import Select from './Select.astro';
-import type { StarlightRouteData as Props } from '../utils/route-data';
+import type { Props } from '../props';
 
 /**
  * Get the equivalent of the current page path for the passed locale.
