--- a/packages/starlight/components/LastUpdated.astro
+++ b/packages/starlight/components/LastUpdated.astro
@@ -1,5 +1,5 @@
 ---
-import type { StarlightRouteData as Props } from '../utils/route-data';
+import type { Props } from '../props';
 import { useTranslations } from '../utils/translations';
 
 const { lang, lastUpdated, locale } = Astro.props;
