--- a/packages/starlight/components/MobileMenuFooter.astro
+++ b/packages/starlight/components/MobileMenuFooter.astro
@@ -1,6 +1,6 @@
 ---
 import { LanguageSelect, ThemeSelect } from 'virtual:starlight/components';
-import type { StarlightRouteData as Props } from '../utils/route-data';
+import type { Props } from '../props';
 ---
 
 <div class="mobile-preferences sl-flex">
