--- a/packages/starlight/components/PageTitle.astro
+++ b/packages/starlight/components/PageTitle.astro
@@ -1,6 +1,6 @@
 ---
 import { PAGE_TITLE_ID } from '../constants';
-import type { StarlightRouteData as Props } from '../utils/route-data';
+import type { Props } from '../props';
 ---
 
 <h1 id={PAGE_TITLE_ID}>{Astro.props.entry.data.title}</h1>
