--- a/packages/starlight/components/SiteTitle.astro
+++ b/packages/starlight/components/SiteTitle.astro
@@ -2,7 +2,7 @@
 import { logos } from 'virtual:starlight/user-images';
 import config from 'virtual:starlight/user-config';
 import { pathWithBase } from '../utils/base';
-import type { StarlightRouteData as Props } from '../utils/route-data';
+import type { Props } from '../props';
 
 const href = pathWithBase(Astro.props.locale || '/');
 ---
