--- a/packages/starlight/components/ThemeSelect.astro
+++ b/packages/starlight/components/ThemeSelect.astro
@@ -1,7 +1,7 @@
 ---
 import { useTranslations } from '../utils/translations';
 import Select from './Select.astro';
-import type { StarlightRouteData as Props } from '../utils/route-data';
+import type { Props } from '../props';
 
 const t = useTranslations(Astro.props.locale);
 ---
