--- a/packages/starlight/components/EditLink.astro
+++ b/packages/starlight/components/EditLink.astro
@@ -1,6 +1,6 @@
 ---
 import Icon from '../user-components/Icon.astro';
-import type { StarlightRouteData as Props } from '../utils/route-data';
+import type { Props } from '../props';
 import { useTranslations } from '../utils/translations';
 
 const t = useTranslations(Astro.props.locale);
