--- a/packages/starlight/components/MobileMenuToggle.astro
+++ b/packages/starlight/components/MobileMenuToggle.astro
@@ -1,5 +1,5 @@
 ---
-import type { StarlightRouteData as Props } from '../utils/route-data';
+import type { Props } from '../props';
 import { useTranslations } from '../utils/translations';
 
 import Icon from '../user-components/Icon.astro';
