--- a/packages/starlight/components/Page.astro
+++ b/packages/starlight/components/Page.astro
@@ -1,5 +1,5 @@
 ---
-import { type StarlightRouteData as Props } from '../utils/route-data';
+import type { Props } from '../props';
 
 // Built-in CSS styles.
 import '../style/props.css';
