--- a/packages/starlight/components/Pagination.astro
+++ b/packages/starlight/components/Pagination.astro
@@ -1,7 +1,7 @@
 ---
 import { useTranslations } from '../utils/translations';
 import Icon from '../user-components/Icon.astro';
-import type { StarlightRouteData as Props } from '../utils/route-data';
+import type { Props } from '../props';
 
 const { dir, locale, pagination } = Astro.props;
 const { prev, next } = pagination;
