--- a/packages/starlight/components/Search.astro
+++ b/packages/starlight/components/Search.astro
@@ -2,7 +2,7 @@
 import '@pagefind/default-ui/css/ui.css';
 import { useTranslations } from '../utils/translations';
 import Icon from '../user-components/Icon.astro';
-import type { StarlightRouteData as Props } from '../utils/route-data';
+import type { Props } from '../props';
 
 const t = useTranslations(Astro.props.locale);
 const pagefindTranslations = {
