--- a/packages/starlight/components/Sidebar.astro
+++ b/packages/starlight/components/Sidebar.astro
@@ -1,5 +1,5 @@
 ---
-import type { StarlightRouteData as Props } from '../utils/route-data';
+import type { Props } from '../props';
 
 import { MobileMenuFooter } from 'virtual:starlight/components';
 import SidebarSublist from './SidebarSublist.astro';
