--- a/packages/starlight/components/SkipLink.astro
+++ b/packages/starlight/components/SkipLink.astro
@@ -1,7 +1,7 @@
 ---
 import { PAGE_TITLE_ID } from '../constants';
 import { useTranslations } from '../utils/translations';
-import type { StarlightRouteData as Props } from '../utils/route-data';
+import type { Props } from '../props';
 
 const t = useTranslations(Astro.props.locale);
 ---
