--- a/packages/starlight/components/ThemeProvider.astro
+++ b/packages/starlight/components/ThemeProvider.astro
@@ -1,5 +1,5 @@
 ---
-import type { StarlightRouteData as Props } from '../utils/route-data';
+import type { Props } from '../props';
 import Icon from '../user-components/Icon.astro';
 ---
 
