--- a/packages/starlight/components/TwoColumnContent.astro
+++ b/packages/starlight/components/TwoColumnContent.astro
@@ -1,5 +1,5 @@
 ---
-import type { StarlightRouteData as Props } from '../utils/route-data';
+import type { Props } from '../props';
 ---
 
 <div class="lg:sl-flex">
