--- a/packages/starlight/components/MobileTableOfContents.astro
+++ b/packages/starlight/components/MobileTableOfContents.astro
@@ -1,36 +1,33 @@
 ---
-import { useTranslations } from '../../utils/translations';
-import Icon from '../../user-components/Icon.astro';
-import TableOfContentsList from './TableOfContentsList.astro';
-import type { TocItem } from './generateToC';
+import { useTranslations } from '../utils/translations';
+import Icon from '../user-components/Icon.astro';
+import TableOfContentsList from './TableOfContents/TableOfContentsList.astro';
+import type { Props } from '../props';
 
-interface Props {
-	toc: TocItem[];
-	locale: string | undefined;
-	maxHeadingLevel: number;
-	minHeadingLevel: number;
-}
-
-const { locale, toc, maxHeadingLevel, minHeadingLevel } = Astro.props;
+const { locale, toc } = Astro.props;
 const t = useTranslations(locale);
 ---
 
-<mobile-starlight-toc data-min-h={minHeadingLevel} data-max-h={maxHeadingLevel}>
-	<nav aria-labelledby="starlight__on-this-page--mobile" class="lg:sl-hidden">
-		<details id="starlight__mobile-toc">
-			<summary id="starlight__on-this-page--mobile" class="sl-flex">
-				<div class="toggle sl-flex">
-					{t('tableOfContents.onThisPage')}
-					<Icon name={'right-caret'} class="caret" size="1rem" />
-				</div>
-				<span class="display-current">{toc[0]?.text}</span>
-			</summary>
-			<div class="dropdown">
-				<TableOfContentsList toc={toc} isMobile />
-			</div>
-		</details>
-	</nav>
-</mobile-starlight-toc>
+{
+	toc && (
+		<mobile-starlight-toc data-min-h={toc.minHeadingLevel} data-max-h={toc.maxHeadingLevel}>
+			<nav aria-labelledby="starlight__on-this-page--mobile">
+				<details id="starlight__mobile-toc">
+					<summary id="starlight__on-this-page--mobile" class="sl-flex">
+						<div class="toggle sl-flex">
+							{t('tableOfContents.onThisPage')}
+							<Icon name={'right-caret'} class="caret" size="1rem" />
+						</div>
+						<span class="display-current" />
+					</summary>
+					<div class="dropdown">
+						<TableOfContentsList toc={toc.items} isMobile />
+					</div>
+				</details>
+			</nav>
+		</mobile-starlight-toc>
+	)
+}
 
 <style>
 	nav {
@@ -112,7 +109,7 @@ const t = useTranslations(locale);
 </style>
 
 <script>
-	import { StarlightTOC } from './starlight-toc';
+	import { StarlightTOC } from './TableOfContents/starlight-toc';
 
 	class MobileStarlightTOC extends StarlightTOC {
 		override set current(link: HTMLAnchorElement) {
