--- a/packages/starlight/components/SiteTitle.astro
+++ b/packages/starlight/components/SiteTitle.astro
@@ -2,26 +2,7 @@
 import { logos } from 'virtual:starlight/user-images';
 import config from 'virtual:starlight/user-config';
 import { pathWithBase } from '../utils/base';
-
-interface Props {
-	locale: string | undefined;
-}
-
-if (config.logo) {
-	let err: string | undefined;
-	if ('src' in config.logo) {
-		if (!logos.dark || !logos.light) {
-			err = `Could not resolve logo import for "${config.logo.src}" (logo.src)`;
-		}
-	} else {
-		if (!logos.dark) {
-			err = `Could not resolve logo import for "${config.logo.dark}" (logo.dark)`;
-		} else if (!logos.light) {
-			err = `Could not resolve logo import for "${config.logo.light}" (logo.light)`;
-		}
-	}
-	if (err) throw new Error(err);
-}
+import type { Props } from '../props';
 
 const href = pathWithBase(Astro.props.locale || '/');
 ---
