Adding showcase for "Some drops of PHP" HTML eBook

--- a/docs/src/components/showcase-sites.astro
+++ b/docs/src/components/showcase-sites.astro
@@ -4,6 +4,7 @@ import FluidGrid from './fluid-grid.astro';
 ---
 
 <FluidGrid>
+	<Card title="Some drops of PHP Book" href="https://drops-of-php.hi-folks.dev/" thumbnail="drops-of-php.hi-folks.dev.png" />
 	<Card title="Athena OS" href="https://athenaos.org" thumbnail="www.athenaos.org.png" />
 	<Card
 		title="PubIndexAPI Docs"
