Adding showcase for "Some drops of PHP" HTML eBook (#845)
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/docs/src/components/showcase-sites.astro
+++ b/docs/src/components/showcase-sites.astro
@@ -53,4 +53,5 @@ import FluidGrid from './fluid-grid.astro';
 		thumbnail="dev.vrchatfrance.fr.png"
 	/>
 	<Card title="Refact" href="https://docs.refact.ai/" thumbnail="refact.ai.png" />
+	<Card title="Some drops of PHP Book" href="https://drops-of-php.hi-folks.dev/" thumbnail="drops-of-php.hi-folks.dev.png" />
 </FluidGrid>
