--- a/docs/src/components/showcase-sites.astro
+++ b/docs/src/components/showcase-sites.astro
@@ -10,6 +10,7 @@ import FluidGrid from './fluid-grid.astro';
 		href="https://docs.pubindexapi.com/"
 		thumbnail="docs.pubindexapi.com.png"
 	/>
+	<Card title="pls" href="https://pls-rs.github.io/pls/" thumbnail="dhruvkb.github.io-pls.png" />
 	<Card title="capo.js" href="https://rviscomi.github.io/capo.js/" thumbnail="capo.js.png" />
 	<Card
 		title="Web Monetization API"
