--- a/docs/src/components/showcase-sites.astro
+++ b/docs/src/components/showcase-sites.astro
@@ -58,4 +58,5 @@ import FluidGrid from './fluid-grid.astro';
 		href="https://drops-of-php.hi-folks.dev/"
 		thumbnail="drops-of-php.hi-folks.dev.png"
 	/>
+	<Card title="Nostalgist.js" href="https://nostalgist.js.org/" thumbnail="nostalgist.js.org.png" />
 </FluidGrid>
