--- a/packages/starlight/components/Page.astro
+++ b/packages/starlight/components/Page.astro
@@ -36,6 +36,8 @@ const pagefindEnabled =
 	Astro.props.entry.slug !== '404' &&
 	!Astro.props.entry.slug.endsWith('/404') &&
 	Astro.props.entry.data.pagefind !== false;
+
+import { ViewTransitions } from 'astro:transitions'
 ---
 
 <html
@@ -74,6 +76,7 @@ const pagefindEnabled =
 			}
 		</style>
 		<ThemeProvider {...Astro.props} />
+		{Astro.props.entry.data.viewTransitions && <ViewTransitions />}
 	</head>
 	<body>
 		<SkipLink {...Astro.props} />
