add AI Chat Snippets chrome extension to showcase

--- a/docs/src/components/showcase-sites.astro
+++ b/docs/src/components/showcase-sites.astro
@@ -59,4 +59,9 @@ import FluidGrid from './fluid-grid.astro';
 		thumbnail="drops-of-php.hi-folks.dev.png"
 	/>
 	<Card title="Nostalgist.js" href="https://nostalgist.js.org/" thumbnail="nostalgist.js.org.png" />
+	<Card
+		title="AI Prompt Snippets"
+		href="https://ai-prompt-snippets.vercel.app/"
+		thumbnail="ai-prompt-snippets.png"
+	/>
 </FluidGrid>
