--- a/docs/src/components/showcase-sites.astro
+++ b/docs/src/components/showcase-sites.astro
@@ -64,4 +64,9 @@ import FluidGrid from './fluid-grid.astro';
 		href="https://ai-prompt-snippets.vercel.app/"
 		thumbnail="ai-prompt-snippets.png"
 	/>
+	<Card
+		title="Folks Router"
+		href="https://folksrouter.io/"
+		thumbnail="folksrouter.io.png"
+	/>
 </FluidGrid>
